--- a/75XV2/index.html
+++ b/75XV2/index.html
@@ -20,7 +20,7 @@
 		.titlehead {
 		  background-color: #003263;  
 		  border-radius: 5px;
-		  color: white;
+		  color: blue;
 		  padding: .5em;
 		  text-decoration: none;
 		  text-align: center;
