--- a/900/index.html
+++ b/900/index.html
@@ -51,7 +51,7 @@
 		<title>PS4 Jailbreak 9.00</title>
 		<script>
 			function allset() {
-				document.getElementById("progress").innerHTML="PS4 Jailbreak 9.00 GOLDHEN Loaded Successfully ✔";
+				document.getElementById("progress").innerHTML="PS4 Jailbreak 9.00 GOLDHEN Loaded Successfully! ✔";
 			}
 		</script>
 		<script src="int64.js"></script>
