--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body class="bg">
 <script>
 	if (localStorage.truefirm == null) {
-		if(navigator.userAgent.indexOf("6.72")>=0){localStorage.truefirm="index672.html";window.location.href="index672.html";}else if(navigator.userAgent.indexOf("7.0")>=0){localStorage.truefirm="index702.html";window.location.href = "index702.html";}else if(navigator.userAgent.indexOf("7.5")>=0){localStorage.truefirm="75XV2/index.html";window.location.href = "75XV2/index.html";}else if(navigator.userAgent.indexOf("9.00")>=0){localStorage.truefirm="900/index.html";window.location.href = "900/index.html";}if(navigator.userAgent.indexOf("Trainer")>=0){localStorage.truefirm="TrainerV1/index.html";window.location.href="index.html";}
+		if(navigator.userAgent.indexOf("6.72")>=0){localStorage.truefirm="index672.html";window.location.href="index672.html";}else if(navigator.userAgent.indexOf("7.0")>=0){localStorage.truefirm="index702.html";window.location.href = "index702.html";}else if(navigator.userAgent.indexOf("7.5")>=0){localStorage.truefirm="75XV2/index.html";window.location.href = "75XV2/index.html";}else if(navigator.userAgent.indexOf("9.00")>=0){localStorage.truefirm="900/index.html";window.location.href = "900/index.html";}
 	}else{
 		window.location.href = localStorage.truefirm;
 	}
@@ -67,7 +67,6 @@
 <a href="index702.html" class="button" style="width:29%">7.02</a>
 <a href="75XV2/index.html" class="button" style="width:29%">7.5X</a><br><br/>
 <a href="900/index.html" class="button" style="width:29%">9.00</a>
-<a href="trainer/index.html" class="button" style="width:29%">Trainer</a>
 </td>
 </tr>
 </table></div>
